@@ -1,3 +1,9 @@
+2006-04-23	Benedikt Meurer <benny@xfce.org>
+
+	* terminal/terminal-preferences-dialog.c
+	  (terminal_preferences_dialog_init): Use "Close" label instead of
+	  "Cancel". Bug #1714.
+
 2006-04-18	Benedikt Meurer <benny@xfce.org>
 
 	* terminal/terminal-window.c(terminal_window_action_about): Use
